# breast_lump_project

./: .gitignore  README.md  all_results.csv
.claude/: settings.local.json
depricated/notebooks/: !UI_multimodal.ipynb  !UI_singlemodal.ipynb  !US_multimodal-finetuned.ipynb  !US_singlemodal-finetuned.ipynb  !graphs_paper.ipynb
launch/: lump.launch  lump_with_accel.launch
lump_scripts/: README.md  git_token.txt  lump_collect_data.py  lump_with_accel_2_csv_back.py  lump_write_2_csv.py  plot_accel.py  process_trial.py  record_data.py
lump_scripts/plot data/: plot_data.py
machine_learning/: README.md  benchmark_speed.py  benchmark_speed_results.csv  check_balance.py  doctors_data_labeled.pkl  extract_doctors_results.py  generate_doctors_data.py  generate_latex_tables.py  main.py  pyproject.toml  reply_letter_to_check.tex  sort_results.py  togzhan_data_labeled.pkl  verify_results.py
machine_learning/results/benchmark/: benchmark_results.csv
machine_learning/results/inceptiontime/: all_results.csv  doctors_test_results.csv  latex_tables.tex
machine_learning/results_old/v2/benchmark/: benchmark_results.csv
machine_learning/results_old/v2/inceptiontime/: latex_tables.tex
machine_learning/tools/: extract_doctors_results.py  generate_latex_tables.py  plot_data.ipynb  plot_sensor_config.py  plots copy.ipynb
ros_files/launch/: README.md  launch_glove.launch  (+5 more)
src/: Palm_reader_My.m  collect_data.py  conversion_My.m  palm_reader.py  real_time2.py  run_matlab.py
stat_analysis/: anova_lump_with.R  anova_lump_without.R  data_preparation.R  plot_box.R  t_test_lump.R
(+48 files in other folders)
