[project]
name = "breast-lump-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "jupyterlab>=4.5.1",
    "notebook>=7.5.1",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scikit-learn==1.5.2",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "torch==2.9.0",
    "torchvision==0.24.0",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
